  * Do not set the Arch substvar in dpkg-source, avoiding generating warnings
    when there's no compiler present. Closes: #526132
  * Preserve faulting errno when printing reason in start-stop-daemon fatal
    function.
  * Only print fatal errno string in start-stop-daemon if it was non-zero.
  * Print the valid values for the IO scheduler class in start-stop-daemon
    --help output.

  [ Frank Lichtenheld ]
  * Dpkg::Version: Remove unnecessary function next_elem which just
    replicates the standard shift behaviour.

  [ Colin Watson ]
  * Add "keyrings" vendor hook, used by dpkg-source to allow vendors to
    supply additional keyrings against which source package signatures will
    be verified. Implement this for Ubuntu. Closes: #525834

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Added dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #519478, #519813, #519998
  * Esperanto (Felipe Castro). Closes: #523023

  [ Updated dpkg translations ]
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Slovak (Ivan Masár). Closes: #519084
  * Swedish (Peter Krefting).
  * Russian (Yuri Kozlov). Closes: #526659

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 29 Mar 2009 13:14:30 +0200

dpkg (1.15.0) experimental; urgency=low

  [ Guillem Jover ]
  * Do not suggest manually changing the alternative symlinks on
    update-alternative's verbose mode. Closes: #412487
  * Refactor subprocess signal setup.
  * Mark and coalesce similar strings for translation.
  * Add '.be' to the default dpkg-source -i regex. Closes: #481716
    Based on a patch by Ben Finney.
  * Fix link order when using libcompat.a and libintl.a by placing them after