@@ -85,6 +85,14 @@ Why:
  signatures for several years already. Supporting only GnuPG enables us to
  rely on some of its features.
 
+What: --print-installation-architecture (dpkg option)
+Status: obsolete
+When: 1.15.x
+Warning: program
+Why:
+ Obsoleted long time ago (2005-01-22). Remaining packages should switch to
+ use 'dpkg --print-architecture'.
+
 History of feature removals
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
